# Abbreviation_url

./: CMakeLists.txt  README.md
include/: Server.h  Storage.h  URL.h
src/: Server.cpp  Storage.cpp  URL.cpp  main.cpp  urls.db
